Update and rename Code ZL.ipynb to Aggregate ZL.ipynb

--- a/Aggregate ZL.ipynb
+++ b/Aggregate ZL.ipynb
@@ -53,8 +53,8 @@
     "# Creat a basic dataframe which is exactly the same as the excel file Python just opened        \n",
     "        df = pd.DataFrame(sheet)\n",
     "    \n",
-    "# If the Excel file does not have Non Cash Deal within it\n",
-    "# Only extract the data we need from Cash Deal table\n",
+    "# If the Excel file does not have A within it\n",
+    "# Only extract the data we need from B table\n",
     "        if df.iloc[-1,0] == #Title1 :\n",
     "            df = df.iloc[6:-3,:]\n",
     "            hd = df.iloc[0]\n",
@@ -63,8 +63,8 @@
     "            df['file name'] = file1\n",
     "            df['folder'] = '2Q21'\n",
     "            \n",
-    "# If the Excel file have Non Cash Deal within it\n",
-    "# Extract the data we need from both Cash Deal and Non Cash Deal tables\n",
+    "# If the Excel file have A within it\n",
+    "# Extract the data we need from both A and B tables\n",
     "        elif (df.iloc[-1,0] is None):\n",
     "            bk = df[df[0] == #Title2 ].index[0]\n",
     "            de = [(bk-3),(bk-2),(bk-1),bk,(bk+1)]\n",
